# agentkit_codex_using_example

./: .dockerignore  .env.runtime.example  .gitignore  Makefile  backend  docker-compose.dev.yml
services/api/: README.md  pyproject.toml
services/api/migrations/versions/: 0001_initial_dossier_core.down.sql  0001_initial_dossier_core.up.sql  0002_entitlements_audit_persistence.down.sql  0002_entitlements_audit_persistence.up.sql
services/api/openapi/: openapi.v1.json
services/api/src/decider_api/: __init__.py  app.py  demo_seed.py  settings.py
services/api/src/decider_api/api/dependencies/: __init__.py  auth.py
services/api/src/decider_api/application/: audit.py  auth_context.py  dossiers.py  entitlements.py  exports.py  health.py  ingestion.py  search_requests.py  tenant_resources.py
services/api/src/decider_api/domain/: dossiers.py  permissions.py  search_requests.py  source_adapter.py  tenant_guard.py  url_policy.py
services/api/tests/: test_auth_context_authn.py  test_celery_worker_unit.py  test_demo_seed.py  test_dossier_repository_integration.py  test_entitlement_audit_persistence_integration.py  test_exports_application_unit.py  test_health_http.py  test_health_unit.py  test_http_client_unit.py  test_ingestion_pipeline_unit.py  test_migrations_integration.py  test_observability_http.py  test_observability_unit.py  test_openapi_contract.py  test_permissions_unit.py  test_search_request_repository_integration.py  test_tenant_guard_unit.py  test_url_policy_unit.py  test_v1_application_unit.py  test_v1_http.py  test_walkthrough_e2e.py
(+95 files in other folders)
