[project]
name = "decider-api"
version = "0.1.0"
description = "Minimal Decider API scaffold for ticket T2."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn>=0.30,<1.0",
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0",
  "celery>=5.4,<6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "smoke: quick API contract smoke checks",
  "e2e_api: API end-to-end HTTP flow checks for CI gate",
]
